--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,32 @@
-body {
-    text-align: center;
+canvas{
+    padding:0;
+    margin-top:-40px;
+    max-height:600px;
+}
+p{
+    font-size:25px;
+    color: #0000ff;
+    font-family: Candal;
+    font-weight: bold;
+    padding:0;
+}
+
+h3{
+    display:none;
+    color: #0000ff;
+    font-family: Candal;
+    font-size: 50px;
+    margin-top: -5vh;
+    font-weight: bold;
+}
+
+/* Extra small devices (phones, up to 480px) */
+@media screen and (max-width: 767px) {
+
+    canvas{
+        max-width: 360px;
+        min-height: 450px;
+
+    }
+
 }
