--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ canvas{
     margin-top:-40px;
     max-height:600px;
 }
-p{
+/*p{
     font-size:25px;
     color: #0000ff;
     font-family: Candal;
@@ -20,13 +20,3 @@ h3{
     font-weight: bold;
 }
 
-/* Extra small devices (phones, up to 480px) */
-@media screen and (max-width: 767px) {
-
-    canvas{
-        max-width: 360px;
-        min-height: 450px;
-
-    }
-
-}
